# council-of-intel

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  config.yaml  pyproject.toml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  appLogic.test.ts  appLogic.ts  domain.ts  main.package.tsx  main.tsx  styles.css
packaging/windows/: council-of-intel.bat
personalities/ach-analyst/: agent.md  knowledge.md  skill.md
personalities/attribution-skeptic/: agent.md  knowledge.md  skill.md
personalities/clark/: agent.md  knowledge.md  skill.md
personalities/devils-advocate/: agent.md  knowledge.md  skill.md
personalities/feynman/: agent.md  knowledge.md  skill.md
personalities/grabo/: agent.md  knowledge.md  skill.md
personalities/heuer/: agent.md  knowledge.md  skill.md
personalities/indicators-of-change/: agent.md  knowledge.md  skill.md
personalities/kent/: agent.md  knowledge.md  skill.md
personalities/key-assumptions-checker/: agent.md  knowledge.md  skill.md
personalities/lao-tzu/: agent.md  knowledge.md  skill.md
personalities/lowenthal/: agent.md  skill.md  (+1 more)
tests/: test_anonymizer.py  test_api.py  test_cli.py  test_config.py  test_dry_run.py  test_env_file.py  test_logging_config.py  test_openrouter_client.py  test_output_builder.py  test_personalities.py  test_ports.py  test_protocol.py  test_real_runner.py  test_sanitizer.py  test_session_validation.py  test_storage.py  test_tui_client.py  test_tui_formatting.py  test_web_launcher.py
(+67 files in other folders)
