[project]
name = "council-of-intel"
version = "0.1.0"
description = "Standalone one-shot intelligence analysis council."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "structlog>=24.4",
    "textual>=0.86",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[project.scripts]
council-of-intel = "council_of_intel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-q",
    "--strict-markers",
    "-p",
    "no:cacheprovider",
    "--cov=council_of_intel",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/council_of_intel"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
